# openfocus

./: .env-default  .gitignore  .pre-commit-config.yaml  .swp  AGENTS.md  Design.md  Makefile  NOTICE  README.md  README.zh-CN.md  UserStory.md  alembic.ini  package-lock.json  package.json  poetry.toml  pyproject.toml  tsconfig.json  ui-refactor.txt  vite.config.ts
openfocus/: __init__.py  app.py  companion.py  companion_grpc.py  companion_rpc.proto  companion_rpc_pb2.py  companion_rpc_pb2_grpc.py  db.py  main.py  models.py  schemas.py
openfocus/agent/: __init__.py  cli.py
openfocus/companion/: SPEC.md  __init__.py  __main__.py  companion_rpc_pb2.py  companion_rpc_pb2_grpc.py  float_ball_helper.py  grpc.py  runtime.py
openfocus/hooks/: openfocus-coco-hook.sh  openfocus-codex-hook.sh
openfocus/infrastructure/: env.py  llm_config.py  migrations.py  streaming.py
openfocus/templates/: agent_space.html  agent_space_prompts.html  base.html  companions.html  goal_detail.html  (+7 more)
remote-terminal/: terminal.css  terminal.js
scripts/: check_license_headers.py  install_agent_hooks.py
skills/: __init__.py  focus_report.py
spec/: README.md  architecture.md  product-requirements.md  roadmap.md
tests/: conftest.py  test_agent_space_files_api.py  test_agent_space_prompts_api.py  test_agent_space_remote_terminal.py  test_api_events_and_skills.py  test_attention_inbox_template.py  test_companion_runtime.py  test_float_ball.py  test_float_ball_helper.py  test_goal_service.py  test_goal_tools.py  test_inspiration_publishing.py  test_inspiration_resources.py  test_inspiration_routes.py  test_install_agent_hooks.py  test_llm_provider.py  test_memory_service.py  test_migrations.py  test_plan_routes.py  test_terminal_panel_static.py  test_web_goals_tasks.py
(+76 files in other folders)
