# SPDX-License-Identifier: Apache-2.0
[project]
name = "openfocus"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = [
    {name = "jinglun",email = "jinglun@apache.org"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "alembic>=1.13.0",
]


[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
ruff = "^0.15.12"
pre-commit = "^4.6.0"


[tool.ruff]
target-version = "py311"
extend-exclude = [
    "openfocus/companion/companion_rpc_pb2.py",
    "openfocus/companion/companion_rpc_pb2_grpc.py",
]


[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]


[tool.pytest.ini_options]
testpaths = ["tests"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
